--- a/app/src/main/res/menu/menu_maps.xml
+++ b/app/src/main/res/menu/menu_maps.xml
@@ -4,10 +4,22 @@
     xmlns:tools="http://schemas.android.com/tools"
     tools:context="com.example.jajac.myplaces.com.example.jajac.mypl.MyPlacesMapActivity">
     <item
+        android:id="@+id/show_friends"
+        android:title="Show friends"
+        android:orderInCategory="100"
+        app:showAsAction="ifRoom" />
+
+    <item
+        android:id="@+id/get_friends"
+        android:title="Get friends"
+        android:orderInCategory="100"
+        app:showAsAction="never" />
+
+    <item
         android:id="@+id/select_loc_item"
         android:title="Select location"
         android:orderInCategory="100"
-        app:showAsAction="ifRoom" />
+        app:showAsAction="never" />
     <item
         android:id="@+id/select_loc_cancel_item"
         android:title="Close map"
