--- a/app/src/main/res/menu/menu_user_panel.xml
+++ b/app/src/main/res/menu/menu_user_panel.xml
@@ -5,6 +5,10 @@
 
     <item android:id="@+id/item_logout" android:title="Logout"
         android:orderInCategory="100" app:showAsAction="ifRoom" />
+    <item android:id="@+id/item_start_service" android:title="Start service"
+        android:orderInCategory="100" app:showAsAction="collapseActionView" />
+    <item android:id="@+id/item_stop_service" android:title="Stop service"
+        android:orderInCategory="100" app:showAsAction="collapseActionView" />
     <item android:id="@+id/item_friends" android:title="Friends"
         android:orderInCategory="100" app:showAsAction="collapseActionView" />
     <item android:id="@+id/item_users_map" android:title="Map"
