--- a/app/src/main/res/layout/activity_user_panel.xml
+++ b/app/src/main/res/layout/activity_user_panel.xml
@@ -22,8 +22,10 @@
             android:id="@+id/header_cover_image"
             android:layout_width="match_parent"
             android:layout_height="200dp"
+            android:background="@drawable/back"
             android:scaleType="centerCrop"
-            />
+            android:layout_alignParentTop="true"
+            android:layout_alignParentStart="true" />
 
         <ImageView
             android:id="@+id/upProfileImageView"
@@ -45,11 +47,13 @@
             android:id="@+id/profile_layout"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:background="#ebca0707"
+            android:background="@drawable/background_selector"
             android:elevation="4dp"
             android:paddingBottom="24dp"
             android:layout_below="@+id/header_cover_image"
             android:layout_alignParentStart="true">
+            <!--android:background="#FF0000"-->
+
 
 
             <TextView
@@ -59,7 +63,7 @@
                 android:layout_centerHorizontal="true"
                 android:layout_marginTop="76dp"
                 android:text="Viral Android"
-                android:textColor="#fff"
+                android:textColor="#000"
                 android:textSize="24sp"
                 android:textStyle="bold" />
 
@@ -71,7 +75,7 @@
                 android:layout_centerHorizontal="true"
                 android:layout_marginTop="12dp"
                 android:text="Android free tutorials and example"
-                android:textColor="#fff"
+                android:textColor="#000"
                 android:textSize="14sp" />
         </RelativeLayout>
 
