--- a/app/src/main/res/menu/menu_user_panel.xml
+++ b/app/src/main/res/menu/menu_user_panel.xml
@@ -5,9 +5,9 @@
 
     <item android:id="@+id/item_logout" android:title="Logout"
         android:orderInCategory="100" app:showAsAction="ifRoom" />
-    <item android:id="@+id/item_start_service" android:title="Start service"
+    <item android:id="@+id/item_start_service" android:title="Start tracking"
         android:orderInCategory="100" app:showAsAction="collapseActionView" />
-    <item android:id="@+id/item_stop_service" android:title="Stop service"
+    <item android:id="@+id/item_stop_service" android:title="Stop tracking"
         android:orderInCategory="100" app:showAsAction="collapseActionView" />
     <item android:id="@+id/item_friends" android:title="Friends"
         android:orderInCategory="100" app:showAsAction="collapseActionView" />
