--- a/app/src/main/res/layout/activity_arena.xml
+++ b/app/src/main/res/layout/activity_arena.xml
@@ -99,7 +99,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="144dp"
                 android:layout_marginTop="20dp"
-                android:visibility="invisible">
+                android:visibility="visible">
 
             </ListView>
 
