--- a/app/src/main/res/menu/menu_maps.xml
+++ b/app/src/main/res/menu/menu_maps.xml
@@ -4,11 +4,11 @@
     xmlns:tools="http://schemas.android.com/tools"
     tools:context="com.mm.minesweepergo.minesweepergo.UsersMapActivity">
 
-    <item
-        android:id="@+id/match"
-        android:title="Match"
-        android:orderInCategory="100"
-        app:showAsAction="ifRoom" />
+    <!--<item-->
+        <!--android:id="@+id/match"-->
+        <!--android:title="Match"-->
+        <!--android:orderInCategory="100"-->
+        <!--app:showAsAction="ifRoom" />-->
 
     <item
         android:id="@+id/show_friends"
