--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -35,19 +35,19 @@
             android:ems="10"
             android:hint="Username"
             android:inputType="textPersonName"
-            android:text="Mm" />
+            android:text="Neca" />
 
         <EditText
             android:id="@+id/liPassword"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_alignStart="@+id/liUsername"
+            android:layout_below="@+id/liUsername"
             android:layout_marginTop="9dp"
             android:ems="10"
             android:hint="Password"
             android:inputType="textPassword"
-            android:text="mm"
-            android:layout_below="@+id/liUsername"
-            android:layout_alignStart="@+id/liUsername" />
+            android:text="aa" />
 
         <Button
             android:id="@+id/liLoginBtn"
