--- a/app/src/main/res/layout/activity_mines_search.xml
+++ b/app/src/main/res/layout/activity_mines_search.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.mm.minesweepergo.minesweepergo.MinesSetActivity">
+    tools:context="com.mm.minesweepergo.minesweepergo.MinesSearchActivity">
 
     <android.support.design.widget.AppBarLayout
         android:layout_width="match_parent"
@@ -12,27 +12,21 @@
         android:theme="@style/AppTheme.AppBarOverlay">
 
         <android.support.v7.widget.Toolbar
-            android:id="@+id/minesset_map_toolbar"
+            android:id="@+id/mines_search_map_toolbar"
             android:layout_width="match_parent"
             android:layout_height="?attr/actionBarSize"
             android:background="?attr/colorPrimary"
             app:popupTheme="@style/AppTheme.PopupOverlay" />
 
-
-        <TextView
-            android:layout_width="20dp"
-            android:id="@+id/mssliderLabel"
-            android:layout_height="wrap_content"
-            android:gravity="center"
-           ></TextView>
-
-        <android.support.v7.widget.AppCompatSeekBar
+        <Button
+            android:id="@+id/msrCheckMine"
             android:layout_width="match_parent"
-            android:id="@+id/msSeekBar"
-            android:layout_height="wrap_content" />
+            android:layout_height="wrap_content"
+            android:background="@color/common_google_signin_btn_text_light_focused"
+            android:text="Set mine" />
 
         <Button
-            android:id="@+id/msSetMine"
+            android:id="@+id/msrPutFlag"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:background="@color/common_google_signin_btn_text_light_focused"
@@ -41,7 +35,7 @@
     </android.support.design.widget.AppBarLayout>
 
 
-    <include layout="@layout/content_minesset"
+    <include layout="@layout/content_mines_search"
         android:id="@+id/include" />
 
     <!--   <android.support.design.widget.FloatingActionButton
