--- a/app/src/main/res/layout/activity_mines_search.xml
+++ b/app/src/main/res/layout/activity_mines_search.xml
@@ -23,7 +23,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:background="@color/common_google_signin_btn_text_light_focused"
-            android:text="Check for mine" />
+            android:text="Scan for mines" />
 
         <Button
             android:id="@+id/msrPutFlag"
