--- a/app/src/main/res/menu/menu_user_panel.xml
+++ b/app/src/main/res/menu/menu_user_panel.xml
@@ -13,5 +13,7 @@
         android:orderInCategory="100" app:showAsAction="collapseActionView" />
     <item android:id="@+id/item_users_map" android:title="Map"
         android:orderInCategory="100" app:showAsAction="collapseActionView" />
+    <item android:id="@+id/item_scoreboard" android:title="Scoreboard"
+        android:orderInCategory="100" app:showAsAction="collapseActionView" />
 
 </menu>
