--- a/app/src/main/res/layout/activity_friends.xml
+++ b/app/src/main/res/layout/activity_friends.xml
@@ -47,7 +47,7 @@
         android:layout_below="@+id/txtSearchList"
         android:id="@+id/listViewAlldevices"
         android:layout_marginTop="20dp"
-        android:visibility="invisible">
+        android:visibility="visible">
     </ListView>
 
 
