--- a/app/src/main/res/menu/menu_maps.xml
+++ b/app/src/main/res/menu/menu_maps.xml
@@ -40,4 +40,10 @@
         android:orderInCategory="100"
         app:showAsAction="never" />
 
+    <item
+        android:id="@+id/search_min_games_nr"
+        android:title="Min games search"
+        android:orderInCategory="100"
+        app:showAsAction="never" />
+
 </menu>
