--- a/app/src/main/res/layout/activity_scoreboard.xml
+++ b/app/src/main/res/layout/activity_scoreboard.xml
@@ -19,8 +19,8 @@
         android:layout_width="fill_parent"
         android:layout_height="fill_parent"
         android:id="@+id/scoreboard_list_view"
-        android:layout_marginTop="20dp"
-        android:visibility="visible">
+        android:visibility="visible"
+        android:layout_below="@+id/scoreboard_toolbar">
     </ListView>
 
 
